  - upgrade moment to 2.17.0 from 2.16.0
  - upgrade mongodb to 2.2.12 from 2.2.11
  - upgrade pem to 1.9.2 from 1.8.3
  - upgrade tmp to 0.0.31 from 0.0.30
  - do not allow query strings containing multiple attribute-value pairs
    for the same attribute
  - upgrade Freebayes to 1.1.0 from 1.0.2-npg-Aug2016 in TravisCI and docs

release 1.0.0
  - show error in log when controller tests fail to cleanup
  - bring back test for unknown server, keep external servers as pending tests
  - security option for server start (TLS)
  - /file url now serves files of all formats without processing

release 0.7.0
  - use npg_ranger server for roundtrip tests
  - add prototype for reference resolve
  - upgrade moment to 2.16.0 from 2.15.2
  - upgrade tmp to 0.0.30 from 0.0.29
  - upgrade fs-extra to 1.0.0 from ^0.30.0
  - upgrade winston to 2.3.0 from 2.2.0

release 0.6.0
  - example apache.conf in docs
  - badges in README.md
  - add cluster support
  - faster server shutdown with http-shutdown

release 0.5.0
  - allow for email in the remote user value
  - server/client version from package.json
  - updated docs for 0.5.0
  - increase timouts for some tests
  - remove assert for process.env.USER in bin/server
  - upgrade browserify to 13.1.1 from 13.1.0
  - upgrade moment to 2.15.2 from 2.15.1
  - upgrade mongodb to 2.2.11 from 2.2.10

release 0.4.0
  - set node recomended to >= 4.5.0 in package.json
  - add config-chain 1.1.11
  - upgrade moment to 2.15.1 from 2.14.1
  - upgrade mongodb to 2.2.10 from 2.2.8
  - upgrade tmp to 0.0.29 from 0.0.28
  - use npm 3.10.7 in travis
  - use node 4.5.0 in travis
  - kill all processes after -g seconds after client disconnection
  - Provide VCF files using freebayes
  - add new module to handle config options
  - fix error in interpreting the end range value in the user query
  - client library - an option to accept trailers and failing the overall
     request if data is truncated