@@ -13,11 +13,11 @@
  *   // The values from this object will override any
  *   // found elsewhere, in config files or similar.
  *   function func() {
- *     return { debug: true };
+ *     return { loglevel: 'debug' };
  *   }
  *   config.provide(func);
- *   // Retrieve the 'debug' setting
- *   options.get('debug'); // true
+ *   // Retrieve the 'loglevel' setting
+ *   options.get('loglevel'); // true
  *
  * @author Andrew Nowak
  * @copyright Genome Research Limited 2016
@@ -56,12 +56,13 @@ const optionsList = [
   ['s','skipauth'             ,'skip authorisation steps'],
   ['' ,'anyorigin'            ,'accept CORS requests from any origin'],
   ['e','emaildomain=DOMAIN'   ,'email domain to validate the remote user value against'],
-  ['d','debug'                ,'debugging mode for this server'],
+  ['' ,'loglevel=[error|warn|info|debug]','set logging level [default: error]'],
   ['V','version'              ,'print version and exit'],
   ['h','help'                 ,'display this help']
 ];
 
 const defaultOptions = {
+  loglevel:         'error',
   [RO_OPTION_KEY]:  false,
   /* cluster */
   numworkers:       1,
