@@ -30,19 +30,11 @@ var getTimeStamp = function() {
 try {
   LOGGER.remove(LOGGER.transports.Console);
   LOGGER.add(LOGGER.transports.Console, {
-    level:     'warn',
+    level:     'error',
     colorize:  true,
     json:      false,
     timestamp: getTimeStamp,
-    stderrLevels: [ 'error' ] // Which levels to send to stderr
-  });
-  LOGGER.add(LOGGER.transports.File, {
-    level:    'warn',
-    filename: 'npg_ranger.winston.log',
-    json:      false,
-    timestamp: getTimeStamp,
-    maxsize:   10 * 1000 * 1000,
-    maxFiles:  20
+    stderrLevels: [ 'error', 'warn', 'info', 'verbose', 'debug', 'silly' ] // Which levels to send to stderr (all)
   });
 } catch (e) {
   console.error('Error when trying to init logging with Winston');
