@@ -240,7 +240,7 @@ describe('Running with ranger server with a', () => {
   let startServer = ( myDone, myFail ) => {
     let serv = spawn(serverCommand, [
       '-s',
-      '-d',
+      '--loglevel=debug',
       '-n0',
       `-p${SERV_PORT}`,
       `-m${mongourl}`]);
@@ -256,7 +256,7 @@ describe('Running with ranger server with a', () => {
   it('file url', (done) => {
     let serv = startServer( done, fail );
 
-    serv.stdout.on('data', (data) => {
+    serv.stderr.on('data', (data) => {
       if (data.toString().match(/Server listening on /)) {
         // Server is listening and ready for connection
         let client = spawn('bin/client.js', [
@@ -278,7 +278,7 @@ describe('Running with ranger server with a', () => {
   it('sample url', (done) => {
     let serv = startServer( done, fail );
 
-    serv.stdout.on('data', (data) => {
+    serv.stderr.on('data', (data) => {
       if (data.toString().match(/Server listening on /)) {
         // Server is listening and ready for connection
         let client = spawn('bin/client.js', [
@@ -304,7 +304,7 @@ describe('Running with ranger server with a', () => {
   it('sample url returning vcf', (done) => {
     let serv = startServer( done, fail );
 
-    serv.stdout.on('data', (data) => {
+    serv.stderr.on('data', (data) => {
       if (data.toString().match(/Server listening on /)) {
         // Server is listening and ready for connection
         let body = '';
@@ -327,7 +327,7 @@ describe('Running with ranger server with a', () => {
   it('GA4GH url and the redirect is followed', (done) => {
     let serv = startServer( done, fail );
 
-    serv.stdout.on('data', (data) => {
+    serv.stderr.on('data', (data) => {
       if (data.toString().match(/Server listening on /)) {
         // Server is listening and ready for connection
         let client = spawn('bin/client.js', [
