@@ -34,7 +34,7 @@ describe('test running https server', () => {
   let startServer = ( myDone ) => {
     let s = spawn(serverCommand, [
       '-s',
-      '-d',
+      '--loglevel=debug',
       '--startssl',
       '--secure_key', private_pem,
       '--secure_cert', cert_pem,
@@ -106,7 +106,7 @@ describe('test running https server', () => {
   it('can reply with a reference from a https requests', ( done ) => {
     serv = startServer( done );
     let acc  = 'XYZ120923';
-    serv.stdout.on('data', (data) => {
+    serv.stderr.on('data', (data) => {
       if (data.toString().match(/Server listening on /)) {
         // Server is listening and ready for connection
         let options = {
